RESOLVED FIXED118062
[BlackBerry] ASSERT(!m_tileMatrixNeedsUpdate) in BackingStorePrivate::render()
https://bugs.webkit.org/show_bug.cgi?id=118062
Summary [BlackBerry] ASSERT(!m_tileMatrixNeedsUpdate) in BackingStorePrivate::render()
Jacky Jiang
Reported 2013-06-26 08:25:31 PDT
JIRA426949. #0 0x7910fc00 in BlackBerry::WebKit::BackingStorePrivate::render (this=0x79af9c88, tileIndexList=...) at /home/jacky/dev/webkit/Source/WebKit/blackberry/Api/BackingStore.cpp:1097 1097 ASSERT(!m_tileMatrixNeedsUpdate); #0 0x7910fc00 in BlackBerry::WebKit::BackingStorePrivate::render (this=0x79af9c88, tileIndexList=...) at /home/jacky/dev/webkit/Source/WebKit/blackberry/Api/BackingStore.cpp:1097 #1 0x7910d182 in BlackBerry::WebKit::BackingStorePrivate::resumeScreenUpdates (this=0x79af9c88, op=BlackBerry::WebKit::BackingStore::RenderAndBlit) at /home/jacky/dev/webkit/Source/WebKit/blackberry/Api/BackingStore.cpp:289 #2 0x7912d43a in BlackBerry::WebKit::WebPagePrivate::setLoadState (this=0x79be8cc8, state=BlackBerry::WebKit::WebPagePrivate::Committed) at /home/jacky/dev/webkit/Source/WebKit/blackberry/Api/WebPage.cpp:1140 #3 0x7916fd66 in WebCore::FrameLoaderClientBlackBerry::dispatchDidCommitLoad (this=0x79bc6c48) at /home/jacky/dev/webkit/Source/WebKit/blackberry/WebCoreSupport/FrameLoaderClientBlackBerry.cpp:545 #4 0x7cc7a7ce in WebCore::FrameLoader::dispatchDidCommitLoad (this=0x79bfe888) at /home/jacky/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:3326 #5 0x7cc70e02 in WebCore::FrameLoader::receivedFirstData (this=0x79bfe888) at /home/jacky/dev/webkit/Source/WebCore/loader/FrameLoader.cpp:617 #6 0x7cc535ea in WebCore::DocumentLoader::commitData (this=0x74bf53a8,
Attachments
Patch (2.23 KB, patch)
2013-06-26 09:39 PDT, Jacky Jiang
rwlbuis: review+
Jacky Jiang
Comment 1 2013-06-26 09:39:15 PDT
Rob Buis
Comment 2 2013-06-26 09:58:35 PDT
Comment on attachment 205503 [details] Patch Okay.
Jacky Jiang
Comment 3 2013-06-26 11:19:34 PDT
Note You need to log in before you can comment on or make changes to this bug.