[BlackBerry] ASSERT(!m_tileMatrixNeedsUpdate) in BackingStorePrivate::render() https://bugs.webkit.org/show_bug.cgi?id=118062

Patch by Jacky Jiang <zhajiang@blackberry.com> on 2013-06-26.
Reviewed by Rob Buis.
Internally reviewed by Jakob Petsovits.

JIRA426949
requestLayoutIfNeeded() can cause zoomAboutPoint() when the layout
is finished and make the tile matrix stale. We need requestLayoutIfNeeded()
before we updateTileMatrixIfNeeded() so that we can fix the ASSERT and
also pass the valid TileIndexList to render().

* Api/BackingStore.cpp:
(BlackBerry::WebKit::BackingStorePrivate::resumeScreenUpdates):
(BlackBerry::WebKit::BackingStorePrivate::render):

Canonical link: https://commits.webkit.org/136130@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151995 268f45cc-cd09-0410-ab3c-d52691b4dbfc